--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,3 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer components{
+    .svg-animation{
+        stroke-dashoffset: 1000;
+        stroke-dasharray: 1000;
+        animation: dash 5s linear forwards;
+    }
+    @keyframes dash {
+        to {
+            stroke-dashoffset: 0;
+        }
+    }
+}
