--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base{
+     body{
+        @apply bg-gray-100;
+     }
+}
 @layer components{
     .svg-animation{
         stroke-dashoffset: 1000;
