--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,21 +1,20 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-@layer base{
-     body{
-        @apply bg-gray-100;
-     }
+@layer base {
+  body {
+    @apply bg-gray-100;
+  }
 }
-@layer components{
-    .svg-animation{
-        stroke-dashoffset: 1000;
-        stroke-dasharray: 1000;
-        animation: dash 5s linear forwards;
+@layer components {
+  .svg-animate {
+    stroke-dashoffset: 100;
+    stroke-dasharray: 100;
+    animation: dash 3s linear forwards;
+  }
+  @keyframes dash {
+    to {
+      stroke-dashoffset: 0;
     }
-    @keyframes dash {
-        to {
-            stroke-dashoffset: 0;
-        }
-    }
+  }
 }
