--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,3 +23,11 @@
     }
   }
 }
+@layer utilities {
+  .bgDarkMode{
+    @apply bg-white dark:bg-grayDarker;
+  }
+  .bgDarkMode{
+    @apply border-gray-200 dark:border-opacity-10;
+  }
+}
